[package]
name = "iter_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"]}
rand = "0.8.5"
kube = { version = "0.76.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_21"] }
base64 = "0.13.0"
serde_json = "1.0.59"
serde = "1.0.137"
anyhow = "1.0.64"
clap = {version = "4.0.18", features = ["derive"]}