[package]
name = "congress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
futures = "0.3.21"
rand = { version = "0.8.5", features=["std", "std_rng"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
derivative = "2.2.0"

[dev-dependencies]