[package]
name = "letsencrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.17", features = ["client", "http1", "tcp"] }
tokio = { version = "1.16.1", features = ["macros", "rt"] }
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
hyper-tls = { version = "0.5.0 "}
p256 = { version = "0.10.1", features = ["ecdsa-core", "ecdsa"] }
rand_core = "0.6.3"
async-trait = "0.1.52"
rustls = "0.20.3"
rsa = "0.5.0"
base64-url = "1.4.10"
sha2 = "0.10.1"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1"
tokio = { version = "1.16.1", features = ["full"] }
hyper = { version = "0.14.17", features = ["full"] }