[package]
name = "tls_acceptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["native-tokio", "http1", "http2", "tls12"] }
rustls = "0.20.4"
tokio-rustls = "0.23.2"
async-trait = "0.1.52"