[package]
name = "iter_ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.65.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
regex = "1"
hyper = { version = "0.14", features = ["full"] }
unicase = "2.6.0"
httparse = "1.5.1"
serde_json = "1.0.59"
iter_letsencrypt = { path = "../iter_letsencrypt" }
hyper-rustls = { version = "0.23.0", features = ["native-tokio", "http1", "http2", "tls12"] }
rustls = "0.20.4"
serde = { version = "1.0.136", features = ["derive"] }
rustls-pemfile = "0.3.0"
tokio-rustls = "0.23.2"
base64 = "0.13.0"
async-raft = "0.6.1"
async-trait = "0.1.52"
rand = "0.8.5"
uuid = { version = "0.8.2", features = ["v4"] }
iter_tls_acceptor = { path = "../iter_tls_acceptor" }
tokio-retry = "0.3"
anyhow = "1.0.66"