[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
serde_json = "1.0.79"
uuid = { version = "1.0.0", features = ["v4", "serde"] }
jsonwebtoken = "8.1.0"
serde = "1.0.137"
lazy_static = "1.4.0"
bcrypt = "0.13.0"
castle_api = "0.19.0"
envoy_http = "0.2.2"
anyhow = "1.0.64"
async-trait = "0.1.57"
futures = "0.3.24"
zxcvbn = "2.2.1"
octorust = "0.1.37"
nom_pem = "4.0.0"
rand = "0.8.5"
kube = { version = "0.76.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_22"] }
dialoguer = "0.10.2"