[package]
name = "iter_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"]}
rand = "0.8.5"
base64 = "0.13.0"
serde_json = "1.0.59"
serde = "1.0.137"
anyhow = "1.0.64"
async-trait = "0.1.58"
reqwest = { version = "0.11.13", features = ["json"] }